# serializer version: 1
# name: test_need_item_get[item_keys]
  list([
    'arch',
    'collapse',
    'constraints',
    'constraints_error',
    'constraints_passed',
    'constraints_results',
    'content',
    'docname',
    'doctype',
    'external_css',
    'external_url',
    'extra1',
    'extra2',
    'has_dead_links',
    'has_forbidden_dead_links',
    'hide',
    'id',
    'id_complete',
    'id_parent',
    'is_external',
    'is_import',
    'is_modified',
    'is_need',
    'is_part',
    'jinja_content',
    'layout',
    'lineno',
    'lineno_content',
    'link1',
    'link1_back',
    'link2',
    'link2_back',
    'modifications',
    'parent_need',
    'parts',
    'post_content',
    'post_template',
    'pre_content',
    'pre_template',
    'section_name',
    'sections',
    'signature',
    'status',
    'style',
    'tags',
    'template',
    'title',
    'type',
    'type_color',
    'type_name',
    'type_prefix',
    'type_style',
  ])
# ---
# name: test_need_item_get[item_list]
  list([
    'arch',
    'collapse',
    'constraints',
    'constraints_error',
    'constraints_passed',
    'constraints_results',
    'content',
    'docname',
    'doctype',
    'external_css',
    'external_url',
    'extra1',
    'extra2',
    'has_dead_links',
    'has_forbidden_dead_links',
    'hide',
    'id',
    'id_complete',
    'id_parent',
    'is_external',
    'is_import',
    'is_modified',
    'is_need',
    'is_part',
    'jinja_content',
    'layout',
    'lineno',
    'lineno_content',
    'link1',
    'link1_back',
    'link2',
    'link2_back',
    'modifications',
    'parent_need',
    'parts',
    'post_content',
    'post_template',
    'pre_content',
    'pre_template',
    'section_name',
    'sections',
    'signature',
    'status',
    'style',
    'tags',
    'template',
    'title',
    'type',
    'type_color',
    'type_name',
    'type_prefix',
    'type_style',
  ])
# ---
# name: test_need_item_get[item_unpacked]
  dict({
    'arch': dict({
    }),
    'collapse': False,
    'constraints': tuple(
      'const1',
    ),
    'constraints_error': None,
    'constraints_passed': None,
    'constraints_results': None,
    'content': 'content',
    'docname': None,
    'doctype': '.rst',
    'external_css': 'external_link',
    'external_url': None,
    'extra1': 'value1',
    'extra2': 'value2',
    'has_dead_links': False,
    'has_forbidden_dead_links': False,
    'hide': False,
    'id': 'abc',
    'id_complete': 'abc',
    'id_parent': 'abc',
    'is_external': False,
    'is_import': False,
    'is_modified': False,
    'is_need': True,
    'is_part': False,
    'jinja_content': False,
    'layout': None,
    'lineno': None,
    'lineno_content': None,
    'link1': list([
      'ref1',
    ]),
    'link1_back': list([
      'ref3',
    ]),
    'link2': list([
      'ref2',
    ]),
    'link2_back': list([
    ]),
    'modifications': 0,
    'parent_need': None,
    'parts': dict({
    }),
    'post_content': None,
    'post_template': None,
    'pre_content': None,
    'pre_template': None,
    'section_name': None,
    'sections': tuple(
    ),
    'signature': None,
    'status': None,
    'style': None,
    'tags': list([
      'tag1',
    ]),
    'template': None,
    'title': 'title',
    'type': 'type',
    'type_color': '#000000',
    'type_name': 'type title',
    'type_prefix': 'type prefix',
    'type_style': 'node',
  })
# ---
# name: test_need_part_item[item_unpacked]
  dict({
    'arch': dict({
    }),
    'collapse': False,
    'constraints': tuple(
      'const1',
    ),
    'constraints_error': None,
    'constraints_passed': None,
    'constraints_results': None,
    'content': 'Part 1',
    'docname': None,
    'doctype': '.rst',
    'external_css': 'external_link',
    'external_url': None,
    'extra1': 'value1',
    'has_dead_links': False,
    'has_forbidden_dead_links': False,
    'hide': False,
    'id': 'part1',
    'id_complete': 'abc.part1',
    'id_parent': 'abc',
    'is_external': False,
    'is_import': False,
    'is_modified': False,
    'is_need': False,
    'is_part': True,
    'jinja_content': False,
    'layout': None,
    'lineno': None,
    'lineno_content': None,
    'links': list([
    ]),
    'links_back': list([
      'ref3',
    ]),
    'modifications': 0,
    'other': list([
    ]),
    'other_back': list([
    ]),
    'parent_need': None,
    'parts': dict({
    }),
    'post_content': None,
    'post_template': None,
    'pre_content': None,
    'pre_template': None,
    'section_name': None,
    'sections': tuple(
    ),
    'signature': None,
    'status': None,
    'style': None,
    'tags': list([
      'tag1',
    ]),
    'template': None,
    'title': 'title',
    'type': 'type',
    'type_color': '#000000',
    'type_name': 'type title',
    'type_prefix': 'type prefix',
    'type_style': 'node',
  })
# ---
# name: test_need_part_item[part_items]
  list([
    tuple(
      'arch',
      dict({
      }),
    ),
    tuple(
      'collapse',
      False,
    ),
    tuple(
      'constraints',
      tuple(
        'const1',
      ),
    ),
    tuple(
      'constraints_error',
      None,
    ),
    tuple(
      'constraints_passed',
      None,
    ),
    tuple(
      'constraints_results',
      None,
    ),
    tuple(
      'content',
      'Part 1',
    ),
    tuple(
      'docname',
      None,
    ),
    tuple(
      'doctype',
      '.rst',
    ),
    tuple(
      'external_css',
      'external_link',
    ),
    tuple(
      'external_url',
      None,
    ),
    tuple(
      'extra1',
      'value1',
    ),
    tuple(
      'has_dead_links',
      False,
    ),
    tuple(
      'has_forbidden_dead_links',
      False,
    ),
    tuple(
      'hide',
      False,
    ),
    tuple(
      'id',
      'part1',
    ),
    tuple(
      'id_complete',
      'abc.part1',
    ),
    tuple(
      'id_parent',
      'abc',
    ),
    tuple(
      'is_external',
      False,
    ),
    tuple(
      'is_import',
      False,
    ),
    tuple(
      'is_modified',
      False,
    ),
    tuple(
      'is_need',
      False,
    ),
    tuple(
      'is_part',
      True,
    ),
    tuple(
      'jinja_content',
      False,
    ),
    tuple(
      'layout',
      None,
    ),
    tuple(
      'lineno',
      None,
    ),
    tuple(
      'lineno_content',
      None,
    ),
    tuple(
      'links',
      list([
      ]),
    ),
    tuple(
      'links_back',
      list([
        'ref3',
      ]),
    ),
    tuple(
      'modifications',
      0,
    ),
    tuple(
      'other',
      list([
      ]),
    ),
    tuple(
      'other_back',
      list([
      ]),
    ),
    tuple(
      'parent_need',
      None,
    ),
    tuple(
      'parts',
      dict({
      }),
    ),
    tuple(
      'post_content',
      None,
    ),
    tuple(
      'post_template',
      None,
    ),
    tuple(
      'pre_content',
      None,
    ),
    tuple(
      'pre_template',
      None,
    ),
    tuple(
      'section_name',
      None,
    ),
    tuple(
      'sections',
      tuple(
      ),
    ),
    tuple(
      'signature',
      None,
    ),
    tuple(
      'status',
      None,
    ),
    tuple(
      'style',
      None,
    ),
    tuple(
      'tags',
      list([
        'tag1',
      ]),
    ),
    tuple(
      'template',
      None,
    ),
    tuple(
      'title',
      'title',
    ),
    tuple(
      'type',
      'type',
    ),
    tuple(
      'type_color',
      '#000000',
    ),
    tuple(
      'type_name',
      'type title',
    ),
    tuple(
      'type_prefix',
      'type prefix',
    ),
    tuple(
      'type_style',
      'node',
    ),
  ])
# ---
# name: test_need_part_item[part_keys]
  list([
    'arch',
    'collapse',
    'constraints',
    'constraints_error',
    'constraints_passed',
    'constraints_results',
    'content',
    'docname',
    'doctype',
    'external_css',
    'external_url',
    'extra1',
    'has_dead_links',
    'has_forbidden_dead_links',
    'hide',
    'id',
    'id_complete',
    'id_parent',
    'is_external',
    'is_import',
    'is_modified',
    'is_need',
    'is_part',
    'jinja_content',
    'layout',
    'lineno',
    'lineno_content',
    'links',
    'links_back',
    'modifications',
    'other',
    'other_back',
    'parent_need',
    'parts',
    'post_content',
    'post_template',
    'pre_content',
    'pre_template',
    'section_name',
    'sections',
    'signature',
    'status',
    'style',
    'tags',
    'template',
    'title',
    'type',
    'type_color',
    'type_name',
    'type_prefix',
    'type_style',
  ])
# ---
